--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,2 +1,4 @@
-0.0.6 by pengfeituan
+10/26/2013 20:55 0.0.7 by pengfeituan
+add libcurl support interface, now one can send xml file easily
+10/26/2013 17:02 0.0.6 by pengfeituan
 change some error in ResponseHandler.hpp, now we can receive file using http post method
