--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,5 @@
-10.26/2013 23:11 0.0.8 by pengfeituan
+10/28/2013 1:30 0.0.9 by pengfeituan
+10/26/2013 23:11 0.0.8 by pengfeituan
 add XMLHandler, now it can read write xml files,and
 can get vaules from xml files, but some useful features need to be added in
 the future
