--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,5 @@
+10/28/2013 13:13 0.0.10 by pengfeituan
+add php curl to post file,now it is very easy to post file using php
 10/28/2013 1:30 0.0.9 by pengfeituan
 10/26/2013 23:11 0.0.8 by pengfeituan
 add XMLHandler, now it can read write xml files,and
