--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,5 @@
+10/29/2013 15:56 0.0.13 by pengfeituan
+add Judger Framework, but the judge code need to be added in the future
 10/29/2013 15:11 0.0.12 by pengfeituan
 add DaemonServer and change some error in XMLHandler, but remember that never
 use operator = in XMLHandler direct, it may cause some undefined error, and i
