--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,8 @@
 10/29/2013 16:32 0.0.14 by pengfeituan
 correct an error in DaemonServer causing loops
 add TLE and MLE support
+add Judger perm_num parameter, but in DaemonServer something else need to
+change
 10/29/2013 15:56 0.0.13 by pengfeituan
 add Judger Framework, but the judge code need to be added in the future
 10/29/2013 15:11 0.0.12 by pengfeituan
